# effectful_mcmc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: biject_to_compatibility.md  quickstart.ipynb
effectful_mcmc/: __init__.py  _dist_introspection.py  compile.py  kernels.py  mcmc.py  primitives.py
scripts/: biject_to_spike.py
tests/: test_compile.py  test_composition.py  test_distributions.py  test_kernels.py  test_primitives.py
