[project]
name = "effectful_mcmc"
version = "0.0.1"
description = "Bridge between effectful and numpyro.infer kernels"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "effectful[numpyro]",
    "numpyro>=0.19",
    "jax>=0.4",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-xdist"]
notebook = ["matplotlib>=3.6", "jupyter"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["effectful_mcmc*"]
